tempfile/impl-trait-for-tuples/tests/fail/trait_bound_not_added.stderr
error[E0046]: not all trait items implemented, missing: `test`
  --> tests/fail/trait_bound_not_added.rs:15:1
   |
2  |     fn test();
   |     ---------- `test` from trait
...
15 | impl Test for Impl {}
   | ^^^^^^^^^^^^^^^^^^ missing `test` in implementation

error[E0599]: no function or associated item named `test` found for type parameter `TupleElement0` in the current scope
 --> tests/fail/trait_bound_not_added.rs:9:32
  |
5 | #[impl_trait_for_tuples::impl_for_tuples(5)]
  | -------------------------------------------- function or associated item `test` not found for this type parameter
...
9 |         for_tuples!( #( Tuple::test(); )* )
  |                                ^^^^ function or associated item not found in `TupleElement0`
  |
  = help: items from traits can only be used if the type parameter is bounded by the trait
help: the following trait defines an item `test`, perhaps you need to restrict type parameter `TupleElement0` with it:
  |
5 | #[impl_trait_for_tuples::impl_for_tuples(5)]: Test
  |                                             ++++++

error[E0599]: no function or associated item named `test` found for type parameter `TupleElement1` in the current scope
 --> tests/fail/trait_bound_not_added.rs:9:32
  |
5 | #[impl_trait_for_tuples::impl_for_tuples(5)]
  | -------------------------------------------- function or associated item `test` not found for this type parameter
...
9 |         for_tuples!( #( Tuple::test(); )* )
  |                                ^^^^ function or associated item not found in `TupleElement1`
  |
  = help: items from traits can only be used if the type parameter is bounded by the trait
help: the following trait defines an item `test`, perhaps you need to restrict type parameter `TupleElement1` with it:
  |
5 | #[impl_trait_for_tuples::impl_for_tuples(5)]: Test
  |                                             ++++++

error[E0599]: no function or associated item named `test` found for type parameter `TupleElement2` in the current scope
 --> tests/fail/trait_bound_not_added.rs:9:32
  |
5 | #[impl_trait_for_tuples::impl_for_tuples(5)]
  | -------------------------------------------- function or associated item `test` not found for this type parameter
...
9 |         for_tuples!( #( Tuple::test(); )* )
  |                                ^^^^ function or associated item not found in `TupleElement2`
  |
  = help: items from traits can only be used if the type parameter is bounded by the trait
help: the following trait defines an item `test`, perhaps you need to restrict type parameter `TupleElement2` with it:
  |
5 | #[impl_trait_for_tuples::impl_for_tuples(5)]: Test
  |                                             ++++++

error[E0599]: no function or associated item named `test` found for type parameter `TupleElement3` in the current scope
 --> tests/fail/trait_bound_not_added.rs:9:32
  |
5 | #[impl_trait_for_tuples::impl_for_tuples(5)]
  | -------------------------------------------- function or associated item `test` not found for this type parameter
...
9 |         for_tuples!( #( Tuple::test(); )* )
  |                                ^^^^ function or associated item not found in `TupleElement3`
  |
  = help: items from traits can only be used if the type parameter is bounded by the trait
help: the following trait defines an item `test`, perhaps you need to restrict type parameter `TupleElement3` with it:
  |
5 | #[impl_trait_for_tuples::impl_for_tuples(5)]: Test
  |                                             ++++++

error[E0599]: no function or associated item named `test` found for type parameter `TupleElement4` in the current scope
 --> tests/fail/trait_bound_not_added.rs:9:32
  |
5 | #[impl_trait_for_tuples::impl_for_tuples(5)]
  | -------------------------------------------- function or associated item `test` not found for this type parameter
...
9 |         for_tuples!( #( Tuple::test(); )* )
  |                                ^^^^ function or associated item not found in `TupleElement4`
  |
  = help: items from traits can only be used if the type parameter is bounded by the trait
help: the following trait defines an item `test`, perhaps you need to restrict type parameter `TupleElement4` with it:
  |
5 | #[impl_trait_for_tuples::impl_for_tuples(5)]: Test
  |                                             ++++++
